Bug 15816 - vfs_streams_depot fstatat broken
Summary: vfs_streams_depot fstatat broken
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-25 11:09 UTC by Volker Lendecke
Modified: 2025-08-28 08:32 UTC (History)
1 user (show)

See Also:


Attachments
Patch (1.96 KB, patch)
2025-02-26 09:22 UTC, Volker Lendecke
no flags Details
Patch (2.87 KB, patch)
2025-02-26 16:01 UTC, Volker Lendecke
no flags Details
Patch (1.96 KB, patch)
2025-02-26 16:07 UTC, Volker Lendecke
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2025-02-25 11:09:04 UTC
need bugnumber
Comment 1 Samba QA Contact 2025-02-26 09:01:04 UTC
This bug was referenced in samba master:

125862c617efae6926c91acae44206f29e61b148
Comment 2 Volker Lendecke 2025-02-26 09:22:48 UTC
Created attachment 18583 [details]
Patch
Comment 3 Volker Lendecke 2025-02-26 16:01:38 UTC
Created attachment 18584 [details]
Patch

Next try. The stat call is actually required, as we don't necessarily have the dev/inode available, and we would subsequently delete the wrong ACL or not delete at all.
Comment 4 Volker Lendecke 2025-02-26 16:05:11 UTC
Crap, submitted to the wrong bugnumber :-(

Stay tuned...
Comment 5 Volker Lendecke 2025-02-26 16:07:13 UTC
Created attachment 18585 [details]
Patch
Comment 6 Ralph Böhme 2025-08-20 17:02:21 UTC
Reassigning to Jule for inclusion in 4.21 and 4.22.
Comment 7 Jule Anger 2025-08-21 09:12:20 UTC
Pushed to autobuild-v4-22-test.
Patch does not apply to v4-21-test.
Comment 8 Samba QA Contact 2025-08-21 15:09:13 UTC
This bug was referenced in samba v4-22-test:

58aa90b34be1e973aa36a393e04e0ae76b315f5f
Comment 9 Samba QA Contact 2025-08-21 15:25:04 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.4):

58aa90b34be1e973aa36a393e04e0ae76b315f5f
Comment 10 Jule Anger 2025-08-28 08:11:07 UTC
Reassigning to Volker to fix 4.21.
Comment 11 Volker Lendecke 2025-08-28 08:26:33 UTC
The fix does not apply to 4.21. It's a 4.22+ only thing.
Comment 12 Jule Anger 2025-08-28 08:32:12 UTC
Closing out bug report.

Thanks!